--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         ws.onopen = function() {
             
             // Web Socket is connected, send data using send()
-            ws.send("Message to send");
+            ws.send("1000wkejf");
 
         };
         
