--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -18,6 +18,14 @@
   <meta name="og:description" property="og:description" content="Play Duel Masters Trading Card Game online, free.">
   <meta name="og:image" property="og:image" content="https://i.imgur.com/DtowEgQ.png">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      corePlugins: {
+        preflight: false
+      }
+  }
+  </script>
   <title>Shobu - Play Duel Masters TCG online</title>
 </head>
 
