Update to Vue 3
- Update to vue 3
- Change from vue-cli(that is already in maintenance mode) to vite - but everything still works the same
- Updates all vue related packages to latest version

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -18,15 +18,8 @@
   <meta name="og:title" property="og:title" content="Play Duel Masters TCG online">
   <meta name="og:description" property="og:description" content="Play Duel Masters Trading Card Game online, free.">
   <meta name="og:image" property="og:image" content="https://i.imgur.com/DtowEgQ.png">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      corePlugins: {
-        preflight: false
-      }
-  }
-  </script>
+  <link rel="icon" href="/favicon.ico">
+  <script type="module" src="/src/main.js"></script>
   <title>Shobu - Play Duel Masters TCG online</title>
 </head>
 
