--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,6 +19,14 @@
   <meta name="og:description" property="og:description" content="Play Duel Masters Trading Card Game online, free.">
   <meta name="og:image" property="og:image" content="https://i.imgur.com/DtowEgQ.png">
   <link rel="icon" href="/favicon.ico">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      corePlugins: {
+        preflight: false
+      }
+  }
+  </script>
   <script type="module" src="/src/main.js"></script>
   <title>Shobu - Play Duel Masters TCG online</title>
 </head>
